--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>undressor</title>
     <base href="/">
+    <title>undressor</title>
+    <meta charset="utf-8">   
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="I undress human souls">
+    <meta property="twitter:description" content="Only when the clothes fall off does the true soul become visible.">
+    <meta property="twitter:image:src" content="https://github.githubassets.com/images/modules/open_graph/github-logo.png">
+    <meta property="twitter:image:width" content="1200">
+    <meta property="twitter:image:height" content="1200">
+
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
