--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">   
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="I undress human souls">
+    <meta property="twitter:title" content="I am undressor">
     <meta property="twitter:description" content="Only when the clothes fall off does the true soul become visible.">
-    <meta property="twitter:image:src" content="https://github.githubassets.com/images/modules/open_graph/github-logo.png">
+    <meta property="twitter:image:src" content="assets/social.png">
     <meta property="twitter:image:width" content="1200">
     <meta property="twitter:image:height" content="1200">
 
