--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -9,7 +9,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="I am undressor">
     <meta property="twitter:description" content="Only when the clothes fall off does the true soul become visible.">
-    <meta property="twitter:image:src" content="assets/social.png">
+    <meta property="twitter:image:src" content="https://undressor-ui.herokuapp.com/assets/social.png">
     <meta property="twitter:image:width" content="1200">
     <meta property="twitter:image:height" content="1200">
 
