--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -4,14 +4,14 @@
     <base href="/">
     <title>undressor</title>
     <meta charset="utf-8">   
-    <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="see more...">
-    <meta property="twitter:description" content="Only when the clothes fall does the true soul become visible.">
-    <meta property="twitter:image:src" content="https://undressor-ui.herokuapp.com/assets/social2.png">
-    <meta property="twitter:image:width" content="1200">
-    <meta property="twitter:image:height" content="1200">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="see more..." />
+    <meta property="twitter:description" content="Only when the clothes fall does the true soul become visible." />
+    <meta property="twitter:image:src" content="https://undressor-ui.herokuapp.com/assets/social2.png" />
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="1200" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
